--- a/code/style.css
+++ b/code/style.css
@@ -7,6 +7,7 @@
   --barFontWeight: {barFontWeight};
   
   --titleFontSize: {titleSize}px;
+  --titleColor: {titleColor};
   --fontSize: {goalSize}px;
   --textTransform: {textTransform};
   --fontWeight: {fontWeight};
@@ -31,6 +32,7 @@
   text-align: var(--titlePosition);
   text-transform: var(--textTransform);
   font-weight: var(--titleFontWeight);
+  color: var(--titleColor);
 }
 
 #progress {
